<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".AuthActivity">


    <LinearLayout
        android:id="@+id/bg_panel_layout"
        android:background="@drawable/custom_back_for_panel"
        android:layout_width="271dp"
        android:layout_height="250dp"
        android:layout_marginTop="64dp"
        android:elevation="2dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:drawableStart="@drawable/ic_email"
        android:background="@drawable/custom_input"
        android:drawablePadding="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:hint="@string/app_ISU"
        android:minHeight="48dp"

        />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/app_password"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_lock"
        android:background="@drawable/custom_input"
        android:drawablePadding="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:minHeight="48dp"

        />

    <Button
        android:id="@+id/logIn"
        android:layout_width="216dp"
        android:layout_height="57dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/button_color"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:text="@string/app_log_in"
        app:cornerRadius="10dp" />
</LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="190dp"
        android:layout_height="46dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/alata"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>