<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoRoom"
    android:background="@color/bg">

    <RelativeLayout
        android:id="@+id/wrap_the_room"
        android:layout_width="168sp"
        android:layout_height="51sp"
        android:layout_marginTop="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <TextView
            android:id="@+id/the_room"
            android:layout_width="128sp"
            android:layout_height="51sp"
            android:text="@string/the_room"
            android:textSize="40sp"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/number_the_room"
            android:layout_width="40sp"
            android:layout_height="51sp"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/table_container"
        android:layout_width="350sp"
        android:layout_height="550sp"
        android:background="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/wrap_the_room"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20sp">
        <RelativeLayout
            android:id="@+id/date_container"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            app:layout_constraintTop_toTopOf="parent"
            app:flow_verticalAlign="center">
            <Button
                android:id="@+id/date_picker"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:text="@string/init_date"
                style="?android:spinnerStyle"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="center_horizontal"
                android:layout_alignParentEnd="true"
                />

        </RelativeLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="492sp"
            app:layout_constraintTop_toBottomOf="@+id/date_container"
            android:stretchColumns="1, 2, 3"
            android:layout_margin="8sp">

            <TableRow>
                <TextView
                    android:text="@string/name_table"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:padding="10sp"
                    android:layout_column="1"
                    android:gravity="center"
                    android:background="@color/bg"
                    />
                <TextView
                    android:text="@string/id_table"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:padding="10sp"
                    android:background="@color/bg"
                    android:layout_column="1"
                    />
                <TextView
                    android:text="@string/time_table"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:padding="10sp"
                    android:background="@color/bg"
                    android:layout_column="1"
                    />

            </TableRow>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycle_view"
                android:layout_height="match_parent"
                android:layout_width="match_parent"/>

        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/back_room_activity"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textColor="@color/color_of_back"
        tools:ignore="MissingConstraints"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/table_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintVertical_bias="0.0"  />

  </androidx.constraintlayout.widget.ConstraintLayout>